==== Core ====
  * Fix issue where cannot resume torrent after doing a 'Pause All'

==== GtkUI ====
  * Fix #883 segfault if locale is not using UTF-8 encoding
  * Fix for adding torrents with invalid filename encodings
  * Fix displaying IPv6 peers in the Peers tab
  * Fix starting the daemon in OS X
  * Fix loading improperly created torrents with mismatched encodings

=== Deluge 1.1.6 - (06 April 2009) ===
==== Core ====
  * Fix udp trackers being classified as DHT source
  * Fix #855 force a resume on a torrent if a 'Force Recheck' is initiated
  * Fix #862 deluged crash when access http://localhost:58846

==== GtkUI ====
  * Fix displaying torrents with non-utf8 encodings in add torrent dialog

==== WebUI ====
  * Fix #870 use proper config location for loading ssl cert

==== Misc ====
  * Add OpenSSL exception to license

=== Deluge 1.1.5 - (16 March 2009) ===
==== Core ====
  * Fix config file saving when no current config file exists

==== GtkUI ====
  * Add 'Comments' field to the Details tab
  * Fix #841 maximum upload slots tooltip

=== Deluge 1.1.4 - (08 March 2009) ===
==== Core ====
  * Fix displaying file errors when the torrent isn't paused
  * Fix issue where torrents being check would get removed due to "stop at ratio" rules
  * Fix #790 tracker hosts not correct for some .uk trackers
  * Make sure config files, resume data and state are fsync'd when saved.  This should help prevent data losses on crashes/improper shutdowns.

==== GtkUI ====
  * Fix hiding bottom pane when no tabs are enabled upon restart
  * Fix saving file priorities when switching torrents in the addtorrentdialog
  * Fix the allocate mode not being preserved when selecting different torrents in addtorrentdialog
  * Fix #655 issue where default torrent options wouldn't be set for new torrents added to the addtorrentdialog
  * Fix #817 email notifications fail to substitute format strings

==== Plugins ====